resolvido bug de z-index.

--- a/css/scss/module/_c-.aside.scss
+++ b/css/scss/module/_c-.aside.scss
@@ -3,7 +3,7 @@ $element1-name: 'aside__left-Sidebar';
 $element2-name: 'aside__right-Sidebar';
 
 .#{$module-name} {
-        z-index: 500;
+        z-index: 1000;
         margin-top: 120px;
         @include device(medium-to-large) {
             margin-top: 90px;
@@ -15,6 +15,8 @@ $element2-name: 'aside__right-Sidebar';
             margin-top: 70px;
         }
     .#{$element1-name} {
+        position: relative;
+            z-index: 800;
         width: 120px;
         height: 100vh;
         @extend %background-light-color3;
@@ -74,7 +76,7 @@ $element2-name: 'aside__right-Sidebar';
     }
     .#{$element2-name} {
         position: relative;
-            z-index: -1;
+            z-index: 700;
         width: 229px;
         height: 100vh;
         @extend %box-shadow-default-2;
