--- a/css/scss/module/_c-.header.scss
+++ b/css/scss/module/_c-.header.scss
@@ -1,7 +1,7 @@
 $module-name: 'header';
 
 .#{$module-name} {
-        z-index: 1000;
+        z-index: 2000;
     height: 120px;
     justify-content: space-between;
     padding: 24px 60px 24px 0px;
